--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - zoomus-bundle-{{ checksum "Gemfile.lock" }}
+          - zoom-bundle-{{ checksum "Gemfile.lock" }}
           # fallback to using the latest cache if no exact match is found
-          - zoomus-bundle-
+          - zoom-bundle-
 
       - run:
           name: install dependencies
@@ -34,7 +34,7 @@ jobs:
       - save_cache:
           paths:
             - ./vendor/bundle
-          key: zoomus-bundle-{{ checksum "Gemfile.lock" }}
+          key: zoom-bundle-{{ checksum "Gemfile.lock" }}
 
       - run:
           name: Setup Code Climate test-reporter
