fix spelling mistake and build out account settings update action

--- a/spec/fixtures/account/settings_get.json
+++ b/spec/fixtures/account/settings_get.json
@@ -1,5 +1,5 @@
 {
-  "schedule_meting": {
+  "schedule_meeting": {
     "host_video": false,
     "participant_video": false,
     "audio_type": "both",
